--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,5 +1,16 @@
 {% extends "home/base.html" %}
 
 {% block content %}
-Hello, world!
+    {% for category in roots %}
+        <div class="card">
+            <div class="card-block">
+                <h4 class="card-title">{{ category.title }}</h4>
+            </div>
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item">Cras justo odio</li>
+                <li class="list-group-item">Dapibus ac facilisis in</li>
+                <li class="list-group-item">Vestibulum at eros</li>
+            </ul>
+        </div>
+    {% endfor %}
 {% endblock %}
