--- a/home/templates/home/story.html
+++ b/home/templates/home/story.html
@@ -1,25 +1,39 @@
 {% extends "home/base.html" %}
-{% load humanize %}
 
 {% block content %}
-    <h1>{{ story.title }}</h1>
-    
-    <hr/>
+    {% include "home/content.html" with content=story %}
 
-    <h5>
-        <span class="text-muted">By</span>
-        {% include "home/utils/authors.html" with authors=story.authors %}
-        <span class="text-muted">{{ story.created }} | {{ story.created|naturaltime }}</span>
-    </h5>
-    
     <p class="text-muted">{{ story.lead|safe }}</p>
 
+    <div class="row">
+        <div class="col-sm-9">
+            {% if story.cover %}
+                <img src="{{ story.cover.source.url }}" id="story-cover">
+                <p class="small text-muted">Photo: {{ story.cover.description }}</p>
+            {% endif %}
+
+            <hr/>
+
+            <p>{{ story.content|safe|linebreaks }}</p>
+        </div>
+
+        <div class="col-sm-3">
+            <div class="card">
+                <div class="card-block">
+                    <h4 class="card-title">Top Stories</h4>
+                </div>
+
+                <ul class="list-group list-group-flush">
+                    {% for top_story in stories %}
+                        <li class="list-group-item">{{ top_story.title }}</li>
+                    {% endfor %}
+                </ul>
+            </div>
+        </div>
+    </div>
+
     <hr/>
-    
-    <p>{{ story.content|safe|linebreaks }}</p>
-    
-    <hr/>
-    
+
     {% if story.created != story.modified %}
         Last updated: {{ story.modified }}
         <br/><br/>
