--- a/static/css/core.css
+++ b/static/css/core.css
@@ -4,7 +4,12 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1#title {
-    font-size: 8rem;
-    margin-bottom: 4rem;
+    font-size: 8vw;
+    margin-bottom: 4vw;
     text-align: center;
+}
+
+img#story-cover {
+    width: 100%;
+    margin-bottom: .5rem;
 }
