--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -7,6 +7,7 @@
         <link href="https://fonts.googleapis.com/css?family=Droid+Serif" rel="stylesheet">
         <link type="text/css" rel="stylesheet" href="{% static 'css/core.css' %}">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>{% block title %}{% endblock %} | SilverChips</title>
     </head>
 
     <body>
@@ -35,5 +36,12 @@
             {% block content %}
             {% endblock %}
         </div>
+
+        <footer class="footer bg-inverse text-white">
+            <div class="container">
+                <h4>Silver Chips Online</h4>
+                Copyright &copy; 2017 Silver Chips Online/Montgomery Blair High School | 51 University Blvd. E., Silver Spring, MD 20901
+            </div>
+        </footer>
     </body>
 </html>
