--- a/static/css/core.css
+++ b/static/css/core.css
@@ -13,3 +13,12 @@ img#story-cover {
     width: 100%;
     margin-bottom: .5rem;
 }
+
+a.solid-link {
+    color: black;
+}
+
+footer {
+    margin-top: 3rem;
+    padding: 1rem;
+}
