--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -4,7 +4,6 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
         <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
-        <link href="https://fonts.googleapis.com/css?family=Droid+Serif" rel="stylesheet">
         <link type="text/css" rel="stylesheet" href="{% static 'css/core.css' %}">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>{% block title %}{% endblock %} | SilverChips</title>
@@ -30,7 +29,7 @@
           </div>
         </nav>
 
-        <h1 id="title">SILVER CHIPS</h1>
+        <h1 id="title">SilverChips.</h1>
 
         <div class="container">
             {% block content %}
@@ -40,7 +39,7 @@
         <footer class="footer bg-inverse text-white">
             <div class="container">
                 <h4>Silver Chips Online</h4>
-                Copyright &copy; 2017 Silver Chips Online/Montgomery Blair High School | 51 University Blvd. E., Silver Spring, MD 20901
+                &copy; 2017 Silver Chips Online / Montgomery Blair High School | 51 University Blvd. E., Silver Spring, MD 20901
             </div>
         </footer>
     </body>
