Fix up static files system.

--- a/staff/templates/staff/story.html
+++ b/staff/templates/staff/story.html
@@ -126,8 +126,8 @@
     <button type="submit" class="btn btn-success">Submit</button>
 </form>
 
-<link rel="stylesheet" href="{% static "css/quill.base.css" %}">
-<link rel="stylesheet" href="{% static "css/quill.snow.css" %}">
+<link rel="stylesheet" href="{% static "quill/quill.base.css" %}">
+<link rel="stylesheet" href="{% static "quill/quill.snow.css" %}">
 <script src="{% static "js/quill.min.js" %}"></script>
 <script type="text/javascript">
 var editor = new Quill('#editor', {
