--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -16,14 +16,8 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav mr-auto">
-              <li class="nav-item ">
-                <a class="nav-link" href="#">Home </a>
-              </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link disabled" href="#">Disabled</a>
+                <a class="nav-link" href="{% url "index" %}">SilverChips</a>
               </li>
             </ul>
           </div>
