--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -6,11 +6,18 @@
             <div class="card-block">
                 <h4 class="card-title">{{ category.title }}</h4>
             </div>
+
             <ul class="list-group list-group-flush">
-                <li class="list-group-item">Cras justo odio</li>
-                <li class="list-group-item">Dapibus ac facilisis in</li>
-                <li class="list-group-item">Vestibulum at eros</li>
+                {% for story in category.stories.all|slice:":5" %}
+                    <li class="list-group-item">
+                        <h4><a href="{% url 'read_story' story.id %}" class="solid-link">{{ story.title }}</a></h4>
+
+                        {{ story.lead|safe }}
+                    </li>
+                {% endfor %}
             </ul>
         </div>
+
+        <br/>
     {% endfor %}
 {% endblock %}
