slowly getting there

--- a/home/static/home.scss
+++ b/home/static/home.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=IM+Fell+English+SC|Droid+Serif');
+@import url('https://fonts.googleapis.com/css?family=UnifrakturCook:700|Droid+Serif');
 
 h1, h2, h3, h4, h5, h6 {
     font-family: "Droid Serif", serif;
@@ -6,9 +6,9 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1#title {
-    font-family: "IM Fell English SC", serif;
+    font-family: "UnifrakturCook", serif;
     font-size: 8vw;
-    margin-bottom: 4vw;
+    margin: 4vw 0;
     text-align: center;
 }
 
