--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,14 +1,16 @@
 {% extends "home/base.html" %}
 
+{% block title %}Home{% endblock %}
+
 {% block content %}
-    {% for category in roots %}
+    {% for section in section_roots %}
         <div class="card">
             <div class="card-block">
-                <h4 class="card-title">{{ category.title }}</h4>
+                <h4 class="card-title">{{ section.title }}</h4>
             </div>
 
             <ul class="list-group list-group-flush">
-                {% for story in category.stories.all|slice:":5" %}
+                {% for story in section.stories.all|slice:":5" %}
                     <li class="list-group-item">
                         <h4><a href="{% url 'read_story' story.id %}" class="solid-link">{{ story.title }}</a></h4>
 
