significant restructuring of code

--- a/home/templates/home/fullcontent.html
+++ b/home/templates/home/fullcontent.html
@@ -34,8 +34,8 @@
 
         {% for author in content.authors.all %}
             <div class="row">
-                <div class="col-2"><img src="{{ author.profile.avatar.url }}" class="img-fluid rounded-circle"></div>
-                <div class="col-10"><p class="text-muted">{{ author.profile.biography }} <a href="" class="solid-link">More &raquo;</a></p></div>
+                <div class="col-2">{% if author.profile.avatar %}<img src="{{ author.profile.avatar.url }}" class="img-fluid rounded-circle">{% endif %}</div>
+                <div class="col-10"><p class="text-muted">{{ author.profile.biography|truncatewords:45 }} <a href="" class="solid-link">More &raquo;</a></p></div>
             </div>
         {% endfor %}
     </div>
