--- a/staff/templates/staff/base.html
+++ b/staff/templates/staff/base.html
@@ -1,9 +1,7 @@
 <html>
     <head>
+        {% include "shared/bootstrap.html" %}
         {% load staticfiles %}
-        <link type="text/css" rel="stylesheet" href="{% static 'lib/bootstrap-3.3.6/css/bootstrap.min.css' %}">
-        <script type="text/javascript" src="{% static 'lib/jquery-2.2.4.min.js' %}"></script>
-        <script type="text/javascript" src="{% static 'lib/bootstrap-3.3.6/js/bootstrap.min.js' %}"></script>
         <link type="text/css" rel="stylesheet" href="{% static 'quill/core.css' %}">
     </head>
     <body>
