Clean up, start on admin interface

--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -5,7 +5,7 @@
     <head>
         {% load staticfiles %}
         {% include "shared/bootstrap.html" %}
-        <link type="text/css" rel="stylesheet" href="{% static "home.scss"|compile %}">
+        <link type="text/css" rel="stylesheet" href="{% static "home/home.scss"|compile %}">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>{% block title %}{% endblock %} | SilverChips</title>
     </head>
