--- a/home/static/home/home.scss
+++ b/home/static/home/home.scss
@@ -5,6 +5,10 @@ h1, h2, h3, h4, h5, h6 {
     font-weight: 500;
 }
 
+.serif {
+    font-family: "UnifraktureCook", serif;
+}
+
 h1#title {
     font-family: "UnifrakturCook", serif;
     font-size: 8vw;
