--- a/staff/templates/staff/login.html
+++ b/staff/templates/staff/login.html
@@ -1,17 +1,25 @@
+{% load compile_static %}
+{% load static %}
+
 <html>
     <head>
-        {% load staticfiles %}
-        <link type="text/css" rel="stylesheet" href="{% static 'lib/bootstrap-3.3.6/css/bootstrap.min.css' %}">
-        <script type="text/javascript" src="{% static 'lib/jquery-2.2.4.min.js' %}"></script>
-        <script type="text/javascript" src="{% static 'lib/bootstrap-3.3.6/js/bootstrap.min.js' %}"></script>
-        <link type="text/css" rel="stylesheet" href="{% static 'quill/core.css' %}">
+        <title>Staff Login</title>
+        {% include "shared/bootstrap.html" %}
+        <link type="text/css" rel="stylesheet" href="{% static "home/home.scss"|compile %}">
+        <link type="text/css" rel="stylesheet" href="{% static "staff/staff.scss"|compile %}">
     </head>
-    <body>
-        <form id="login" action="/staff/login/post" method="post">{% csrf_token %}
-            <label>Staff Login</label>
-            <input class="form-control" type="text" name="username" placeholder="Username">
-            <input class="form-control" type="password" name="password" placeholder="Password">
-            <input class="form-control" type="submit" value="">
-        </form>
+    <body id="login">
+        <div class="container-center">
+            <div class="center">
+                <h1 class="serif">SCO</h1>
+                <form id="login-form" action="{% url "staff:login" %}" method="post">
+                    {% csrf_token %}
+                    <label id="label">Staff Login</label>
+                    <input class="form-control" type="text" name="username" placeholder="Username">
+                    <input class="form-control" type="password" name="password" placeholder="Password">
+                    <button class="btn btn-primary" value="Login" type="submit">Login</button>
+                </form>
+            </div>
+        </div>
     </body>
 </html>
