Fixed staff login and urls

--- a/home/static/home/home.scss
+++ b/home/static/home/home.scss
@@ -6,7 +6,8 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .serif {
-    font-family: "UnifraktureCook", serif;
+    font-family: "UnifrakturCook", serif;
+    font-size: 7rem;
 }
 
 h1#title {
