--- a/staff/static/staff/_login.scss
+++ b/staff/static/staff/_login.scss
@@ -10,6 +10,9 @@
       text-align: center;
       vertical-align: middle;
 
+      h1 { margin-bottom: 4px; }
+      p { margin-top: 0px; margin-bottom: 2rem; }
+
       form#login-form {
         width: 350px;
         margin: auto;
