--- a/staff/static/staff/staff.scss
+++ b/staff/static/staff/staff.scss
@@ -1,2 +1,12 @@
 @import "login";
 
+.column-wrapper {
+  display: flex;
+  align-items: stretch;
+}
+
+.sidebar {
+  width: 250px;
+  background-color: darkgray;
+  min-width: 250px;
+}
