--- a/staff/templates/staff/base.html
+++ b/staff/templates/staff/base.html
@@ -2,36 +2,13 @@
     <head>
         {% include "shared/bootstrap.html" %}
         {% load staticfiles %}
-        <link type="text/css" rel="stylesheet" href="{% static 'quill/core.css' %}">
+        <link type="text/css" rel="stylesheet" href="{% static 'home/home.scss' %}">
+        <link type="text/css" rel="stylesheet" href="{% static 'staff/staff.scss' %}">
         <title>{% block title %}Staff Site{% endblock %}</title>
         {% block head %}{% endblock %}
     </head>
     <body>
-        <nav id="menu" class="navbar navbar-dark bg-dark navbar-expand-sm">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#menu-items">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="menu-items">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">Silver Chips Online</a>
-                    </li>
-                </ul>
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            {{ user.get_full_name }}
-                        </a>
-                        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-                            <a class="dropdown-item" href="{% url "staff:profile" %}">Profile</a>
-                            <a class="dropdown-item" href="#">Settings</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="{% url "staff:logout" %}">Logout</a>
-                        </div>
-                    </li>
-                </ul>
-            </div>
-        </nav>
+        {% include "staff/components/menubar.html" %}
         <div class="column-wrapper">
             {% include "staff/components/writer/sidebar.html" %}
             <div id="content" class="fluid-width">
