--- a/staff/static/staff/staff.scss
+++ b/staff/static/staff/staff.scss
@@ -1,5 +1,8 @@
 @import "login";
 
+#menu {
+  flex-shrink: 0;
+}
 
 #column-wrapper {
   display: flex;
@@ -7,21 +10,72 @@
   flex-grow: 1;
 }
 
-.sidebar {
-  width: 250px;
+#sidebar {
+
+  padding: 0;
+  margin: 0;
   background-color: darkgray;
-  min-width: 250px;
+
+  display: flex;
+  flex-direction: column;
+
+  .menu {
+
+    flex-grow: 1;
+
+    white-space: nowrap;
+    color: #ccc;
+    background-color: #555;
+    margin-top: 0;
+    box-sizing: border-box;
+
+    padding-bottom: 1em;
+
+    a:first-child {
+      margin-top: 0.75em;
+    }
+
+    .item, .section {
+      padding: 0.25em 1em;
+      text-decoration: none;
+      color: inherit;
+      display: block;
+    }
+
+    .section {
+      padding-top: 1em;
+      font-weight: bold;
+    }
+
+    .item {
+      cursor: pointer;
+    }
+
+    .item:hover {
+      color: #ccc;
+      background-color: #666;
+    }
+
+    .item.disabled:hover {
+      background-color: inherit;
+    }
+
+  }
+
 }
 
 
 #content-wrapper {
   flex-grow: 1;
   overflow: hidden;
+  display: flex;
+  flex-direction: column;
 
   #content {
-    height: 100%;
     padding: 2rem;
     overflow: auto;
+    flex-grow: 1;
+
   }
 }
 
@@ -29,4 +83,7 @@
   display: flex;
   flex-direction: column;
   max-height: 100vh;
+  margin: 0;
+  padding: 0;
 }
+
