--- a/staff/templates/staff/components/menubar.html
+++ b/staff/templates/staff/components/menubar.html
@@ -1,7 +1,7 @@
 <nav id="menu" class="navbar navbar-dark bg-dark navbar-expand-sm">
-    <!--button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#menu-items">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#menu-items">
         <span class="navbar-toggler-icon"></span>
-    </button-->
+    </button>
     <div class="collapse navbar-collapse" id="menu-items">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
