--- a/staff/templates/staff/components/writer/sidebar.html
+++ b/staff/templates/staff/components/writer/sidebar.html
@@ -1,6 +1,7 @@
-<a class="item disabled">Dashboard</a>
-<a class="item disabled">News</a>
-<a class="item disabled">Courses</a>
-<a class="item disabled">Friends</a>
-<a class="item" href="#">Groups</a>
-<div class="section">Groups</div>
+<div class="section">Stories</div>
+<a class="item">Published</a>
+<a class="item">Drafts</a>
+<a class="item">Upload</a>
+<div class="section">Content</div>
+<a class="item">Media</a>
+<a class="item">Upload</a>
