Tweak links on menu and sidebar

--- a/staff/templates/staff/components/menubar.html
+++ b/staff/templates/staff/components/menubar.html
@@ -5,7 +5,7 @@
     <div class="collapse navbar-collapse" id="menu-items">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-                <a class="navbar-brand nav-link" href="{% url "staff:index" %}">Silver Chips Online</a>
+                <a class="navbar-brand nav-link" href="{% url "index" %}">Silver Chips Online</a>
             </li>
         </ul>
         <ul class="navbar-nav ml-auto">
