--- a/staff/templates/staff/components/writer/sidebar.html
+++ b/staff/templates/staff/components/writer/sidebar.html
@@ -1,3 +1,4 @@
+<a class="item" href="{% url "staff:index" %}">Dashboard</a>
 <div class="section">Stories</div>
 <a class="item">Published</a>
 <a class="item">Drafts</a>
