small updates to content

--- a/home/templates/home/fullcontent.html
+++ b/home/templates/home/fullcontent.html
@@ -14,8 +14,10 @@
         </h5>
     </div>
     <div class="col-md-3 text-right">
-        <i class="fa fa-twitter-square fa-2x" aria-hidden="true"></i>
-        <i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i>
+        <a href="https://twitter.com/intent/tweet
+            ?text=Check%20out%20this%20{{ content.descriptor }}%21
+            &hashtags=SilverChipsOnline&url=https%3A%2F%2Fsilverchips.mbhs.edu{{ request.path|urlencode }}
+            &via=mbhsSCO"><i class="fa fa-twitter-square fa-2x" aria-hidden="true"></i></a>
     </div>
 </div>
 
@@ -43,7 +45,7 @@
     <div class="col-sm-3">
         <div class="card">
             <div class="card-block">
-                <h4 class="card-title">Top Stories</h4>
+                <h4 class="card-title">Latest Stories</h4>
             </div>
 
             <ul class="list-group list-group-flush">
