--- a/core/templates/content/image.html
+++ b/core/templates/content/image.html
@@ -1,3 +1,3 @@
 {% with image=content %}
-    <a href="{% url "view_image" image.id %}"><img src="{{ image.source.url }}" class="img-fluid"></a>
+    <a href="{% url "view_image" image.id %}"><img src="{{ image.source.url }}" class="img-fluid mx-auto d-block"></a>
 {% endwith %}
