New users can be created for guest writers

--- a/staff/templates/staff/components/writer/sidebar.html
+++ b/staff/templates/staff/components/writer/sidebar.html
@@ -2,7 +2,7 @@
 <div class="section">Stories</div>
 <a class="item">Published</a>
 <a class="item">Drafts</a>
-<a class="item">Upload</a>
+<a class="item" href="{% url "staff:stories:create" %}">Upload</a>
 <div class="section">Content</div>
 <a class="item">Media</a>
 <a class="item">Upload</a>
