--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -15,12 +15,12 @@
           <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarDropdown" aria-controls="navbarDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <a class="navbar-brand" href="{% url "index" %}">SilverChips</a>
+          <a class="navbar-brand" href="{% url "home:index" %}">SilverChips</a>
           <div class="collapse navbar-collapse" id="navbarDropdown">
             <ul class="navbar-nav mr-auto">
                 {% for section in section_roots %}
                   <li class="nav-item">
-                    <a class="nav-link" href="{% url 'view_section' section.name %}">{{ section.title }}</a>
+                    <a class="nav-link" href="{% url "home:view_section" section.name %}">{{ section.title }}</a>
                   </li>
                 {% endfor %}
             </ul>
